--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
+/var
 /vendor/
 symfony.lock
 ###< symfony/framework-bundle ###
