--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "name": "etwin/myhordes",
     "description": "",
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.0",
         "ext-ctype": "*",
         "ext-dom": "*",
         "ext-iconv": "*",
@@ -23,34 +23,34 @@
         "graphp/algorithms": "^0.8.2",
         "laminas/laminas-code": "^3.4",
         "phpdocumentor/reflection-docblock": "^5.2",
-        "sensio/framework-extra-bundle": "^5.5",
-        "shivas/versioning-bundle": "^3.2",
+        "sensio/framework-extra-bundle": "^6.2",
+        "wvsgnovize01/versioning-bundle": "dev-master",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "5.3.*",
-        "symfony/console": "5.3.*",
-        "symfony/dotenv": "5.3.*",
-        "symfony/expression-language": "5.3.*",
+        "symfony/asset": "6.0.*",
+        "symfony/console": "6.0.*",
+        "symfony/dotenv": "6.0.*",
+        "symfony/expression-language": "6.0.*",
         "symfony/flex": "^1.5",
-        "symfony/form": "5.3.*",
-        "symfony/framework-bundle": "5.3.*",
-        "symfony/http-client": "5.3.*",
-        "symfony/intl": "5.3.*",
-        "symfony/lock": "5.3.*",
-        "symfony/mailer": "5.3.*",
+        "symfony/form": "6.0.*",
+        "symfony/framework-bundle": "6.0.*",
+        "symfony/http-client": "6.0.*",
+        "symfony/intl": "6.0.*",
+        "symfony/lock": "6.0.*",
+        "symfony/mailer": "6.0.*",
         "symfony/monolog-bundle": "^3.5",
-        "symfony/notifier": "5.3.*",
-        "symfony/process": "5.3.*",
-        "symfony/property-access": "5.3.*",
-        "symfony/property-info": "5.3.*",
-        "symfony/security-bundle": "5.3.*",
-        "symfony/serializer": "5.3.*",
-        "symfony/string": "5.3.*",
-        "symfony/translation": "5.3.*",
-        "symfony/twig-bundle": "5.3.*",
-        "symfony/validator": "5.3.*",
-        "symfony/web-link": "5.3.*",
+        "symfony/notifier": "6.0.*",
+        "symfony/process": "6.0.*",
+        "symfony/property-access": "6.0.*",
+        "symfony/property-info": "6.0.*",
+        "symfony/security-bundle": "6.0.*",
+        "symfony/serializer": "6.0.*",
+        "symfony/string": "6.0.*",
+        "symfony/translation": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
+        "symfony/validator": "6.0.*",
+        "symfony/web-link": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "5.3.*",
+        "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -58,18 +58,24 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.6",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "5.3.*",
-        "symfony/css-selector": "5.3.*",
-        "symfony/debug-bundle": "5.3.*",
+        "symfony/browser-kit": "6.0.*",
+        "symfony/css-selector": "6.0.*",
+        "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.14",
         "symfony/phpunit-bridge": "^5.3",
-        "symfony/stopwatch": "5.3.*",
-        "symfony/web-profiler-bundle": "5.3.*"
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     },
     "suggest": {
         "ext-imagick": "*",
         "ext-pthreads": "*"
     },
+    "repositories": [
+      {
+        "type": "vcs",
+        "url":  "https://github.com/wvsgnovize01/versioning-bundle.git"
+      }
+    ],
     "config": {
         "preferred-install": {
             "*": "dist"
