--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,6 +18,9 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    # Enable ContainerInterface in Symfony 6
+    Symfony\Component\DependencyInjection\ContainerInterface: '@service_container'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
