--- a/config/app/events.yml
+++ b/config/app/events.yml
@@ -6,6 +6,7 @@ parameters:
         begin: 12-04 00:00
         end: 12-05 00:00
       conf:
+        name: 'Armageddon'
         priority: 10
         css: 'arma'
         hooks:
@@ -18,6 +19,7 @@ parameters:
         begin: 04-01 00:00
         end: 04-02 00:00
       conf:
+        name: '1. April'
         priority: 11
         hooks:
           door: 'App\Structures\Hook::door_april'
@@ -29,6 +31,7 @@ parameters:
         begin: 12-20 00:00
         end: 01-07 00:00
       conf:
+        name: 'Weihnachten'
         priority: 101
         css: 'christmas'
         event_dig:
@@ -46,6 +49,7 @@ parameters:
         begin: 03-14 00:00
         end: 03-20 00:00
       conf:
+        name: 'St. Patrick'
         priority: 102
         css: 'stpatrick'
         event_dig:
@@ -60,6 +64,7 @@ parameters:
         before: 4
         after: 4
       conf:
+        name: 'Ostern'
         priority: 103
         css: 'easter'
         event_dig:
@@ -75,6 +80,7 @@ parameters:
         begin: 10-25 00:00
         end: 11-01 00:00
       conf:
+        name: 'Halloween'
         priority: 104
         css: 'halloween'
         event_dig:
@@ -88,6 +94,7 @@ parameters:
         begin: 2021-08-25 00:00
         end: 2021-09-01 00:00
       conf:
+        name: 'Purge'
         priority: 10
         hooks:
           watchtower: 'App\Structures\Hook::watchtower_purge'
