--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -111,6 +111,7 @@ parameters:
         daytime:
           range: [7,18]
           invert: false
+        hide_home_upgrade: false
 
       features:
         camping: true
@@ -213,6 +214,7 @@ parameters:
         red_soul_max_factor: 666
         sandball_nastyness: 0.85
         ghoul_infection_begin: 2
+        hide_home_upgrade: true
 
       features:
         last_death:
