--- a/config/services.yaml
+++ b/config/services.yaml
@@ -95,6 +95,12 @@ services:
         arguments:
             $env: '%kernel.environment%'
 
+    # GameProfileService does not perform version gating in dev environments, so we need to
+    # pass the env
+    App\Service\GameProfilerService:
+      arguments:
+        $env: '%kernel.environment%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     # Symfony\Component\Translation\Extractor\PhpExtractor:
