Add error notifications to Discord and GitLab

--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ DATABASE_URL=mysql://myhordes:myh0rd3s@mariadb:3306/myhordes?serverVersion=maria
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
