--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "ext-curl": "*"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.6",
