Add mod reports via Discord

--- a/config/app/myhordes.yml
+++ b/config/app/myhordes.yml
@@ -20,6 +20,8 @@ parameters:
     anti-grief:
       min-sp: 20
       reg-limit: 2
+    modmail:
+      discord: ~
     fatalmail:
       target: ~
       source: ~
