--- a/config/services.yaml
+++ b/config/services.yaml
@@ -44,6 +44,8 @@ services:
         public: true
     App\Service\TownHandler:
         public: true
+    App\Service\HTMLService:
+        public: true
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
