--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ build:
     - yarn install
     - yarn encore dev
     # Install default DB
-    - php bin/console app:migrate -i
+    - php bin/console app:migrate -i -vvv
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
