--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -4,7 +4,7 @@ monolog:
             type: fingers_crossed
             action_level: error
             handler: nested
-            excluded_http_codes: [403, 404, 405]
+            excluded_http_codes: [403, 404, 405, 429]
             channels: ["!night", "!admin"]
         night:
             type: fingers_crossed
