Update fixtures package to PHP8.1 and Symfony6, add gazette and council data to fixtures package

--- a/packages/myhordes-fixtures/src/Resources/config/services.yaml
+++ b/packages/myhordes-fixtures/src/Resources/config/services.yaml
@@ -56,3 +56,8 @@ services:
       tags: [ { name: 'myhordes.fixtures.citizen.home.upgrades', priority: 0 } ]
     MyHordes\Fixtures\Service\CitizenComplaintDataService:
       tags: [ { name: 'myhordes.fixtures.citizen.complaints', priority: 0 } ]
+
+    MyHordes\Fixtures\Service\GazetteDataService:
+      tags: [ { name: 'myhordes.fixtures.gazettes', priority: 0 } ]
+    MyHordes\Fixtures\Service\CouncilDataService:
+      tags: [ { name: 'myhordes.fixtures.councils', priority: 0 } ]
