--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -5,6 +5,8 @@ parameters:
 
       open_town_limit: 7
       open_town_grace: 30
+      stranger_day_limit: -1
+      stranger_citizen_limit: 0
       lock_door_until_full: false
 
       well:       { min: 90, max: 180 }
@@ -140,6 +142,9 @@ parameters:
       disabled_buildings: ['small_vaudoudoll_#00', 'small_bokorsword_#00', 'small_spiritmirage_#00','small_holyrain_#00']
       
     small:
+      stranger_day_limit: 2
+      stranger_citizen_limit: 10
+
       map:  { min: 12, max: 14, margin: 0.25 }
       ruins: 7
       explorable_ruins: 0
