--- a/config/services.yaml
+++ b/config/services.yaml
@@ -52,6 +52,14 @@ services:
     App\Service\HTMLService:
         public: true
 
+    # This aliases the classes used by the translation tool commands
+    translation.tools.loader:
+      alias: 'translation.loader.xliff'
+      public: true
+    translation.tools.dumper:
+      alias: 'translation.dumper.xliff'
+      public: true
+
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
