Move picto fixtures to package

--- a/packages/myhordes-fixtures/src/Resources/config/services.yaml
+++ b/packages/myhordes-fixtures/src/Resources/config/services.yaml
@@ -20,6 +20,8 @@ services:
     MyHordes\Fixtures\Service\RolePlayTextDataService:
       tags: [ { name: 'myhordes.fixtures.rp_texts', priority: 0 } ]
 
+    MyHordes\Fixtures\Service\PictoDataService:
+      tags: [ { name: 'myhordes.fixtures.pictos', priority: 0 } ]
     MyHordes\Fixtures\Service\AwardTitleDataService:
       tags: [ { name: 'myhordes.fixtures.awards.titles', priority: 0 } ]
     MyHordes\Fixtures\Service\AwardIconDataService:
