Move permission fixtures to package

--- a/packages/myhordes-fixtures/src/Resources/config/services.yaml
+++ b/packages/myhordes-fixtures/src/Resources/config/services.yaml
@@ -14,6 +14,9 @@ services:
     MyHordes\Fixtures\Fixtures\:
       resource: '../../../src/Fixtures/*'
 
+    MyHordes\Fixtures\Service\PermissionDataService:
+      tags: [ { name: 'myhordes.fixtures.permissions', priority: 0 } ]
+
     MyHordes\Fixtures\Service\TownDataService:
       tags: [ { name: 'myhordes.fixtures.town', priority: 0 } ]
 
