Move action fixtures to package

--- a/packages/myhordes-fixtures/src/Resources/config/services.yaml
+++ b/packages/myhordes-fixtures/src/Resources/config/services.yaml
@@ -83,3 +83,6 @@ services:
 
     MyHordes\Fixtures\Service\LogDataService:
       tags: [ { name: 'myhordes.fixtures.logs', priority: 0 } ]
+
+    MyHordes\Fixtures\Service\ActionDataService:
+      tags: [ { name: 'myhordes.fixtures.actions', priority: 0 } ]
