--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ webpack.config.deploy.js
 config/packages/dev/app/*.yml
 config/packages/prod/app/*.yml
 etwin.toml
+rector.php
 
 # Misc
 .DS_Store
