--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.6",
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.12.20",
         "symfony/browser-kit": "6.0.*",
         "symfony/css-selector": "6.0.*",
         "symfony/debug-bundle": "6.0.*",
