--- a/config/packages/rate_limiter.yaml
+++ b/config/packages/rate_limiter.yaml
@@ -1,7 +1,6 @@
 framework:
   rate_limiter:
     anonymous_api:
-      # use 'sliding_window' if you prefer that policy
       policy: 'sliding_window'
       limit: 1000
       interval: '60 minutes'
@@ -9,3 +8,15 @@ framework:
       policy: 'token_bucket'
       limit: 5000
       rate: { interval: '15 minutes', amount: 500 }
+    blackboard_edit_slide:
+      policy: 'token_bucket'
+      limit: 10
+      rate: { interval: '2 minutes', amount: 1 }
+    blackboard_edit_fixed:
+      policy: 'fixed_window'
+      limit: 100
+      interval: '24 hours'
+    forum_thread_creation:
+      policy: 'token_bucket'
+      limit: 10
+      rate: { interval: '10 minutes', amount: 1 }
