--- a/config/app/myhordes.yml
+++ b/config/app/myhordes.yml
@@ -6,7 +6,7 @@ parameters:
       date_modifier: "tomorrow"
     backup:
       path: ~ # Working directory
-      compression: ~
+      compression: "bz2"
       limits:
         nightly: 0
         daily: 7
@@ -18,7 +18,7 @@ parameters:
         local:
           enabled: true
           type: 'local'
-          path: '~/var/backups'
+          path: '~/var/backup'
         remote:
           enabled: false
           type: 'ftp'
