Revert backup storages

--- a/config/app/myhordes.yml
+++ b/config/app/myhordes.yml
@@ -5,8 +5,8 @@ parameters:
       retries: 3
       date_modifier: "tomorrow"
     backup:
-      path: ~ # Working directory
-      compression: "bz2"
+      path: ~
+      compression: ~
       limits:
         nightly: 0
         daily: 7
@@ -14,28 +14,6 @@ parameters:
         monthly: 12
         update: 2
         manual: -1
-      storages:
-        local:
-          enabled: true
-          type: 'local'
-          path: '~/var/backup'
-        remote:
-          enabled: false
-          type: 'ftp'
-          host: 'ftp.example.com'
-          port: 21
-          user: 'ftpuser'
-          pass: 'ftppass'
-          path: '/'
-        sftpremote:
-          enabled: false
-          type: 'sftp'
-          host: 'sftp.example.com'
-          port: 22
-          user: 'sftpuser'
-          pass: 'sftppass'
-          path: '/'
-
     coalitions:
       size: 5
       inactive_after_days: 5
