--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.0",
         "twig/twig": "^2.12|^3.0",
-        "myhordes/fixtures": "@dev",
+        "myhordes/fixtures": "@dev"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.6",
