--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,9 @@
-files:
-  - source: /translations/*.de.xlf
-    translation: /translations/%file_name%.%two_letters_code%.xlf
+"files": [
+  {
+    "source": "/translations/*.de.xlf",
+    "translation": "/translations/%file_name%.%two_letters_code%.xlf",
+    "translation_replace": {
+      ".de": ""
+    }
+  }
+]
