--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,9 +1,5 @@
-"files": [
-  {
-    "source": "/translations/*.de.xlf",
-    "translation": "/translations/%file_name%.%two_letters_code%.xlf",
-    "translation_replace": {
-      ".de": ""
-    }
-  }
-]
+files:
+  - source: /translations/*.de.xlf
+    translation: /translations/%file_name%.%two_letters_code%.xlf
+    translation_replace:
+      .de: ''
