--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,14 @@
     "require": {
         "php": ">=8.1",
         "ext-ctype": "*",
+        "ext-curl": "*",
         "ext-dom": "*",
+        "ext-ftp": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
-        "ext-curl": "*",
-        "ext-ftp": "*",
-        "ext-ssh2": "*",
         "brainbox-et/etwin-api-client": "^0.1.1",
         "clue/graph": "^0.9.1",
         "doctrine/annotations": "^1.0",
@@ -25,9 +24,9 @@
         "doctrine/orm": "^2.7",
         "graphp/algorithms": "^0.8.2",
         "laminas/laminas-code": "^4.5",
+        "myhordes/fixtures": "@dev",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.2",
-        "wvsgnovize01/versioning-bundle": "dev-master",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
@@ -58,7 +57,7 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.0",
         "twig/twig": "^2.12|^3.0",
-        "myhordes/fixtures": "@dev"
+        "wvsgnovize01/versioning-bundle": "dev-master"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.6",
@@ -74,7 +73,8 @@
     },
     "suggest": {
         "ext-imagick": "*",
-        "ext-pthreads": "*"
+        "ext-pthreads": "*",
+        "ext-ssh2": "*"
     },
     "repositories": [
       {
